--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,13 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.64.1",
+    "react-hook-form": "^7.45.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.1.0",
     "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-links": "^7.1.1",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.1.0",
     "@storybook/nextjs": "^7.1.0",
@@ -40,6 +40,8 @@
     "classnames": "^2.3.2",
     "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.3",
+    "sass": "^1.64.1",
+    "sass-loader": "^13.3.2",
     "storybook": "^7.1.0"
   }
 }
