--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -19,30 +15,14 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@styles/*": [
-        "./src/styles/*"
-      ],
-      "@shared/*": [
-        "./src/shared/*"
-      ],
-      "@features/*": [
-        "./src/features/*"
-      ],
-      "@assets/*": [
-        "./src/assets/*"
-      ],
-      "@pages/*": [
-        "./src/pages/*"
-      ],
-      "@app/*": [
-        "./src/app/*"
-      ],
-      "@entities/*": [
-        "src/entities/*"
-      ],
-      "@widgets/*": [
-        "src/widgets/*"
-      ]
+      "@styles/*": ["./src/shared/styles/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@features/*": ["./src/features/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@app/*": ["./src/app/*"],
+      "@entities/*": ["src/entities/*"],
+      "@widgets/*": ["src/widgets/*"]
     },
     "plugins": [
       {
@@ -58,7 +38,5 @@
     "**/*.stories.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
