--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -3,23 +3,20 @@
         "browser": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint"
+        "@typescript-eslint",
+		"import"
     ],
     "rules": {
         "class-methods-use-this": "off",
         "no-useless-catch": "off",
         "no-underscore-dangle": "off",
         "import/no-extraneous-dependencies": "warn",
-
 
         "import/order": "off",
         "max-len": ["warn", 150],
