--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
 	"scripts": {
 		"dev": "npm run start-ts-node-dev",
 		"start-ts-node-dev": "ts-node-dev --poll src/index.ts",
-		"build": "tsc"
+		"build": "tsc",
+		"lint": "eslint . --ext .js,.ts",
+		"lint:fix": "eslint . --ext .js,.ts --fix"
 	},
 	"author": "",
 	"license": "ISC",
@@ -22,11 +24,15 @@
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/pg": "^8.10.2",
+		"@typescript-eslint/eslint-plugin": "^6.4.1",
+		"@typescript-eslint/parser": "^6.5.0",
 		"bcrypt": "^5.1.0",
 		"concurrently": "^8.2.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
+		"eslint": "^8.48.0",
+		"eslint-plugin-import": "^2.28.1",
 		"express-validator": "^7.0.1",
 		"jsonwebtoken": "^9.0.1",
 		"nodemon": "^3.0.1",
