--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "prepare": "cd .. && husky install frontend/.husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-redux": "^8.1.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
