w/o private routes and password refresh on frontend

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "env": {
+        "jest/globals": true,
         "browser": true,
         "es2021": true
     },
@@ -10,7 +11,8 @@
     },
     "plugins": [
         "@typescript-eslint",
-		"import"
+		"import",
+        "jest"
     ],
     "rules": {
         "class-methods-use-this": "off",
