github actions test 2

--- a/.github/workflows/frontend-pushes.yml
+++ b/.github/workflows/frontend-pushes.yml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - run: npm ci
-      - run: npm run lint
-        working-directory: frontend/main
+      - name: Npm install
+        working-directory: ./frontend/main
+        run: npm ci
+      - name: Run linters
+        run: npm run lint
