--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -11,30 +11,31 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
+    "mobx": "^6.11.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@types/node": "^20.9.4",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "classnames": "^2.3.2",
-    "eslint": "^8.45.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-storybook": "^0.6.15",
     "react-hook-form": "^7.48.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "storybook": "^7.5.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "typescript": "^5.3.2",
+    "vite": "^4.5.0",
     "yup": "^1.3.2"
   }
 }
