--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
     "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.5",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
