--- a/frontend/main/tsconfig.json
+++ b/frontend/main/tsconfig.json
@@ -31,7 +31,7 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.stories.tsx",
-    "src/app/router/index.jsx", 
+    "src/app/router/index.tsx",
   ],
   "exclude": ["node_modules"]
 }
