adding migrations for tables of user and tokens
refactor logout and adding refresh

adding in services refresh and start impl logout

adding functionality in util/tokens for easy working with JWT tokens

--- a/backend/docker-compose2.yml
+++ b/backend/docker-compose2.yml
@@ -12,6 +12,7 @@ services:
       - app-network
 
   postgres:
+    container_name: postgres-sp
     image: postgres:latest
     environment:
       POSTGRES_DB: ${DB_NAME}
