--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3'
+version: '3.8'
 services:
   go-app:
+    container_name: auth-go-sp
     build:
       context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    env_file:
+      - .env
     depends_on:
       - postgres
     networks:
