--- a/.github/workflows/frontend-pushes.yml
+++ b/.github/workflows/frontend-pushes.yml
@@ -20,3 +20,5 @@ jobs:
         run: npm ci
       - name: Run linters
         run: npm run lint
+      - name: Run test
+        run: npm run test
