--- a/.github/workflows/backend-pushes.yml
+++ b/.github/workflows/backend-pushes.yml
@@ -1,24 +1,24 @@
-name: backend
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.21.x'
-      - name: Install dependencies
-        run: go get .
-      - name: Build
-        run: go build -v ./...
-      - name: Test with the Go CLI
-        run: go test
+#name: backend
+#on:
+#  push:
+#    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    defaults:
+#      run:
+#        working-directory: ./backend
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Setup Go
+#        uses: actions/setup-go@v4
+#        with:
+#          go-version: '1.21.x'
+#      - name: Install dependencies
+#        run: go get .
+#      - name: Build
+#        run: go build -v ./...
+#      - name: Test with the Go CLI
+#        run: go test
