--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -29,14 +29,15 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@jest/globals": "^29.7.0",
-    "@storybook/addon-essentials": "7.5.3",
-    "@storybook/addon-interactions": "7.5.3",
-    "@storybook/addon-links": "7.5.3",
-    "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/blocks": "7.5.3",
-    "@storybook/react": "7.5.3",
-    "@storybook/react-vite": "7.5.3",
+    "@storybook/addon-essentials": "7.6.7",
+    "@storybook/addon-interactions": "7.6.7",
+    "@storybook/addon-links": "7.6.7",
+    "@storybook/addon-onboarding": "1.0.10",
+    "@storybook/blocks": "7.6.7",
+    "@storybook/react": "7.6.7",
+    "@storybook/react-vite": "7.6.7",
     "@storybook/testing-library": "0.2.2",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.9.4",
@@ -51,10 +52,11 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "eslint-plugin-storybook": "^0.6.15",
     "jest": "^29.7.0",
+    "prettier": "^3.1.1",
     "react-hook-form": "^7.48.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "storybook": "^7.5.3",
+    "storybook": "^7.6.7",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
