--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -18,19 +18,19 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "axios": "^1.6.2",
-    "mobx": "^6.11.0",
-    "mobx-react-lite": "^4.0.5",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "ts-node": "^10.9.2"
+    "@hookform/resolvers": "3.3.2",
+    "axios": "1.6.2",
+    "mobx": "6.11.0",
+    "mobx-react-lite": "4.0.5",
+    "path": "0.12.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.20.0",
+    "ts-node": "10.9.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@jest/globals": "^29.7.0",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@jest/globals": "29.7.0",
     "@storybook/addon-essentials": "7.6.7",
     "@storybook/addon-interactions": "7.6.7",
     "@storybook/addon-links": "7.6.7",
@@ -39,27 +39,27 @@
     "@storybook/react": "7.6.7",
     "@storybook/react-vite": "7.6.7",
     "@storybook/testing-library": "0.2.2",
-    "@types/jest": "^29.5.11",
-    "@types/node": "^20.9.4",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "classnames": "^2.3.2",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "eslint-plugin-storybook": "^0.6.15",
-    "jest": "^29.7.0",
-    "prettier": "^3.1.1",
-    "react-hook-form": "^7.48.2",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "storybook": "^7.6.7",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0",
-    "yup": "^1.3.2"
+    "@types/jest": "29.5.11",
+    "@types/node": "20.9.4",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
+    "@vitejs/plugin-react": "4.2.0",
+    "classnames": "2.3.2",
+    "eslint": "8.54.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.4",
+    "eslint-plugin-storybook": "0.6.15",
+    "jest": "29.7.0",
+    "prettier": "3.1.1",
+    "react-hook-form": "7.48.2",
+    "sass": "1.69.5",
+    "sass-loader": "13.3.2",
+    "storybook": "7.6.7",
+    "ts-jest": "29.1.1",
+    "typescript": "5.2.2",
+    "vite": "4.5.0",
+    "yup": "1.3.2"
   }
 }
