[FRONTEND] History page few fixes and workouts(in future templates) page

--- a/frontend/main/.prettierrc.json
+++ b/frontend/main/.prettierrc.json
@@ -15,6 +15,7 @@
   "importOrder": [
     "^(react|next(.*))$",
     "",
+    "^@pages/(.*)$",
     "^@app/(.*)$",
     "^@routes/(.*)$",
     "^@widgets/(.*)$",
