[FRONTEND] Calendar component added

--- a/frontend/main/.prettierrc.json
+++ b/frontend/main/.prettierrc.json
@@ -11,7 +11,9 @@
   "arrowParens": "always",
   "trailingComma": "es5",
   "quoteProps": "as-needed",
-  "plugins": ["@ianvs/prettier-plugin-sort-imports"],
+  "plugins": [
+    "@ianvs/prettier-plugin-sort-imports"
+  ],
   "importOrder": [
     "^(react|next(.*))$",
     "",
@@ -28,5 +30,10 @@
     "",
     "^(.*)(sass|css|scss)$"
   ],
-  "importOrderParserPlugins": ["classProperties", "decorators-legacy", "jsx", "typescript"]
+  "importOrderParserPlugins": [
+    "classProperties",
+    "decorators-legacy",
+    "jsx",
+    "typescript"
+  ]
 }
