--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -24,6 +24,7 @@
     "mobx-react-lite": "4.0.5",
     "path": "0.12.7",
     "react": "18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.20.0",
     "ts-node": "10.9.2"
