--- a/.github/workflows/backend-pushes.yml
+++ b/.github/workflows/backend-pushes.yml
@@ -11,9 +11,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
+#    defaults:
+#      run:
+#        working-directory: ./backend
     steps:
       - name: Setup Go
         uses: actions/setup-go@v4
