--- a/.github/workflows/backend-pushes.yml
+++ b/.github/workflows/backend-pushes.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: go get .
+        run: go mod tidy
 
       - name: Build
         run: go build -v ./cmd/main.go
