--- a/.github/workflows/backend-pushes.yml
+++ b/.github/workflows/backend-pushes.yml
@@ -30,7 +30,7 @@ jobs:
         run: go build -v ./cmd/main.go
 
       - name: Test with the Go CLI
-        run: go test -v $(go list ./... | grep -v ./cmd/)
+        run: go test -v $(go list ./... | grep -v cmd)
 
 #  build:
 #    name: Build
