--- a/.github/workflows/backend-pushes.yml
+++ b/.github/workflows/backend-pushes.yml
@@ -1,24 +1,49 @@
-#name: backend
-#on:
-#  push:
+name: backend
+on:
+  push:
+#    branches: [ main ] #TODO read docs
+    paths:
+      - backend/**
+  pull_request:
 #    branches: [ main ]
-#  pull_request:
-#    branches: [ main ]
-#jobs:
+
+jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
+    steps:
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21.x'
+
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: go mod tidy
+
+      - name: Build
+        run: go build -v ./cmd/main.go
+
+      - name: Test with the Go CLI
+        run: go test -v $(go list ./... | grep -v cmd)
+
 #  build:
+#    name: Build
 #    runs-on: ubuntu-latest
-#    defaults:
-#      run:
-#        working-directory: ./backend
+#    needs: [test]
 #    steps:
-#      - uses: actions/checkout@v4
-#      - name: Setup Go
+#      - name: Set up Go
 #        uses: actions/setup-go@v4
 #        with:
 #          go-version: '1.21.x'
+#
 #      - name: Install dependencies
 #        run: go get .
+#
 #      - name: Build
 #        run: go build -v ./...
-#      - name: Test with the Go CLI
-#        run: go test
