--- a/.github/workflows/frontend-pushes.yml
+++ b/.github/workflows/frontend-pushes.yml
@@ -2,8 +2,12 @@ name: frontend
 on:
   push:
     branches: [ main ]
+    paths:
+      - frontend/**
   pull_request:
     branches: [ main ]
+    paths:
+      - frontend/**
 
 jobs:
   build:
